# avia-rag-bot

./: .env.docker.example  .gitignore  ARCHITECTURE.md  ARCHITECTURE_RU.md  Makefile  README.md  README_RU.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  Makefile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  router.py
backend/app/api/routers/: chat.py  etl.py  health.py
backend/app/core/: chat_constants.py  config.py  db_manager.py  faiss_manager.py  lifespan.py  logs.py  rag_constants.py  sse_manager.py
backend/app/db/: deps.py  init_db.py  session.py
backend/app/exceptions/: __init__.py  base.py  database.py  db_errors.py  ingest.py  service.py
backend/app/llm/: __init__.py  chat.py  chat_title.py  embeddings.py  http_retry.py  kb_static_context.py  prompt_guard.py  prompts.py
backend/app/models/: __init__.py  chat.py  chat_message.py  chunk_meta.py  index_manifest.py
backend/app/rag/: __init__.py  decision_tree.py  generation.py  pipeline.py  prompts.py  retrieval.py  retrieval_lanes.py  types.py
backend/app/rag/methods/: __init__.py  base.py  hyde.py  multi_query.py  query_rewriting.py  registry.py  rerank.py
backend/app/repositories/: chat.py  chat_message.py  chunk.py  health.py  index_manifest.py
backend/app/schemas/: chat.py  common.py  etl.py  health.py  llm.py  rag.py
backend/app/services/: chat.py  chat_title.py  etl.py  etl_checkpoint.py  etl_plan.py  etl_progress.py  health.py
backend/data/: .gitignore  rag-doc-index.md
backend/etl/: README.md  README_RU.md  __init__.py  chunker.py  hashing.py  parser.py  static_sections.py  types.py
backend/scripts/: etl.py  run_etl.py
backend/tests/: README.md  README_RU.md  conftest.py  paths.py
backend/tests/api/: conftest.py  mocks.py  test_chat.py  test_chat_events.py  test_etl.py  test_health.py
backend/tests/exceptions/: test_db_errors.py
backend/tests/unit/core/: test_sse_manager.py
backend/tests/unit/etl/: test_chunker.py
backend/tests/unit/llm/: test_chat_title.py  test_http_retry.py  test_kb_static_context.py  test_prompt_guard.py  test_prompts.py
backend/tests/unit/rag/: test_decision_tree.py  test_pipeline.py  test_retrieval.py
backend/tests/unit/services/: test_chat_title_service.py  (+4 more)
(+101 files in other folders)
