[project]
name = "avia-bot-backend"
version = "0.1.0"
description = "RAG airport assistant backend"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.18.4",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.136.1",
    "pydantic-ai>=1.94.0",
    "pydantic-settings>=2.14.0",
    "sqlalchemy[asyncio]>=2.0.42",
    "sqlmodel>=0.0.33",
    "structlog>=24.4.0",
    "uvicorn[standard]>=0.46.0",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "httpx>=0.28.1",
    "pyright>=1.1.409",
    "pytest-asyncio>=1.3.0",
    "pytest>=8.4.2",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "ruff>=0.15.12",
]

[tool.black]
line-length = 120

[tool.uv]
default-groups = ["dev"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "etl"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "B", "UP"]
