[project]
name = "avia-bot-backend"
version = "0.1.0"
description = "RAG airport assistant backend"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "faiss-cpu>=1.14.3",
    "fastapi>=0.139.0",
    "pydantic-ai>=1.107.0",
    "pydantic-settings>=2.14.2",
    "sqlalchemy[asyncio]>=2.0.51",
    "sqlmodel>=0.0.39",
    "structlog>=24.4.0",
    "uvicorn[standard]>=0.50.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "httpx>=0.28.1",
    "pyright>=1.1.411",
    "pytest-asyncio>=1.4.0",
    "pytest>=8.4.2",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "ruff>=0.15.20",
]

[tool.black]
line-length = 120

[tool.uv]
default-groups = ["dev"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "etl"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "api: HTTP API integration tests (tests/api/)",
    "unit: business-logic unit tests (tests/unit/)",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "B", "UP"]
